--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --config jest.config.json",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -16,9 +16,12 @@
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.2.0",
-    "jest": "^24.9.0",
+    "jest": "23.6.0",
     "metro-react-native-babel-preset": "^0.56.0",
+    "react-dom": "^16.9.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
